# TKOM-Interpreter

./: CMakeLists.txt  Lexer.cpp  Lexer.h  ParseTreePrinter.cpp  ParseTreePrinter.h  Parser.cpp  Parser.h  Source.cpp  Source.h  Tracer.cpp  main.cpp  readme.md
AST/: ASTNode.h  Assignable.cpp  Assignable.h  Assignment.cpp  Assignment.h  Condition.h  Expression.h  ForStatement.cpp  ForStatement.h  FunctionCall.cpp  FunctionCall.h  FunctionDefinition.h  IfStatement.cpp  IfStatement.h  IntVar.h  Literal.h  LogVar.h  Lvalue.cpp  Lvalue.h  ReturnStatement.cpp  ReturnStatement.h  Rvalue.cpp  Rvalue.h  StatementBlock.h  StringVar.h  Variable.cpp  Variable.h  VariableDeclaration.cpp  VariableDeclaration.h  WhileStatement.cpp  WhileStatement.h
Modules/: Executor.cpp  Executor.h  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SemanticChecker.cpp  SemanticChecker.h  Source.cpp  Source.h  Tracer.cpp  Tracer.h
Structures/: LogEntry.cpp  LogEntry.h
Structures/AST/: ASTNode.h  Assignable.h  Assignment.h  Condition.h  Expression.h  FieldAccess.h  ForStatement.h  FunctionCall.h  FunctionDefinition.h  IfStatement.h  LexNames.h  Literal.h  LogVar.h  Program.h  ReturnStatement.h  Statement.h  StatementBlock.h  Variable.h  VariableDeclaration.h  WhileStatement.h
Structures/Ir/: AssignableIr.h  AssignmentIr.h  BlockIr.h  Collection.h  CollectionVar.h  ConditionIr.h  ConditionOperand.h  Executable.h  ExpressionIr.h  ExpressionOperand.h  Function.h  IntVar.h  Literal.h  Scope.h  StatementIr.h  StringVar.h  Variable.h  VariableIr.h  WhileIr.h
